--- a/app/src/main/res/layout/dialogo_bitacora.xml
+++ b/app/src/main/res/layout/dialogo_bitacora.xml
@@ -24,7 +24,7 @@
     <!--            android:textSize="24sp" />-->
 
     <!--    </LinearLayout>-->
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listaBitacora"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
