--- a/app/src/main/res/layout/dialogo_editarperfil.xml
+++ b/app/src/main/res/layout/dialogo_editarperfil.xml
@@ -24,7 +24,7 @@
             android:textColor="@color/Blanco"
             android:textSize="24sp"/>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayoutFirstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,14 +33,14 @@
             app:counterEnabled="true"
             app:counterMaxLength="40">
 
-            <android.support.design.widget.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nombrePerfilAux"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:maxLength="40"
                 android:maxLines="1" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
