--- a/app/src/main/res/layout/dialogo_firma.xml
+++ b/app/src/main/res/layout/dialogo_firma.xml
@@ -85,7 +85,7 @@
             android:textColor="@color/Blanco"
             android:text="Cancelar"/>
 
-        <android.support.v4.widget.Space
+        <androidx.legacy.widget.Space
             android:layout_width="5dp"
             android:layout_height="match_parent" />
 
