--- a/app/src/main/res/layout/dialogo_pac_exis.xml
+++ b/app/src/main/res/layout/dialogo_pac_exis.xml
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp" />
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/lista_pacientesExis"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
