--- a/app/src/main/res/layout/fragment_consultar_fichas.xml
+++ b/app/src/main/res/layout/fragment_consultar_fichas.xml
@@ -25,24 +25,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <android.support.design.widget.TextInputEditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/nombre_con"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Primer Nombre"
                     android:inputType="text"
                     android:textColor="@color/Blanco" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="20dp" />
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/lista_fichas"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
