--- a/app/src/main/res/layout/fragment_guardador_ficha_normal.xml
+++ b/app/src/main/res/layout/fragment_guardador_ficha_normal.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/guardadorFichaN"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
