--- a/app/src/main/res/layout/fragment_historialfoto.xml
+++ b/app/src/main/res/layout/fragment_historialfoto.xml
@@ -62,11 +62,11 @@
             app:fab_title="Registrar" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="60dp">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </FrameLayout>
