--- a/app/src/main/res/layout/fragment_listado_pacientes.xml
+++ b/app/src/main/res/layout/fragment_listado_pacientes.xml
@@ -25,7 +25,7 @@
 <!--        android:src="@drawable/icono_buscar"-->
 <!--        app:backgroundTint="@color/AzulOscuro" />-->
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_pacientes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
