--- a/app/src/main/res/layout/fragment_listado_servicios.xml
+++ b/app/src/main/res/layout/fragment_listado_servicios.xml
@@ -33,7 +33,7 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listado_servicios"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
