--- a/app/src/main/res/layout/fragment_seguimiento_especial.xml
+++ b/app/src/main/res/layout/fragment_seguimiento_especial.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/toolbar"
                 layout="@layout/toolbar" />
 
-            <android.support.v7.widget.GridLayout
+            <androidx.gridlayout.widget.GridLayout
                 android:id="@+id/menuSeguimiento"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
                 app:columnOrderPreserved="false"
                 app:rowCount="4">
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="12dp"
@@ -68,9 +68,9 @@
 
 
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="12dp"
@@ -106,8 +106,8 @@
 
 
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </android.support.v7.widget.GridLayout>
+                </androidx.cardview.widget.CardView>
+            </androidx.gridlayout.widget.GridLayout>
 
             <Space
                 android:layout_width="match_parent"
