--- a/app/src/main/res/menu/opciones_toolbar_catalogos.xml
+++ b/app/src/main/res/menu/opciones_toolbar_catalogos.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/icono_buscar"
         android:orderInCategory="200"
         android:title="Buscar"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
