Ficha - Listado Fichas 1

--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/FondoSecundario"
-    tools:context=".Rutas.Fichas.FichaForm.Ficha">
+    tools:context=".Rutas.Fichas.FichaNormal.Ficha">
 
     <include
         android:id="@+id/toolbar"
