--- a/app/src/main/res/layout/fragment_menu_ficha_normal.xml
+++ b/app/src/main/res/layout/fragment_menu_ficha_normal.xml
@@ -4,22 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IngresoNormal"
-    android:background="@color/FondoTerciario">
+    android:background="@color/FondoSecundario"
+    tools:context=".Rutas.Fichas.MenuFichaNormal">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/guardarBD"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="65dp"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:src="@drawable/ic_check"
-        app:backgroundTint="@color/AzulOscuro" />
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/guardarBD"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom|end"-->
+<!--        android:layout_marginRight="10dp"-->
+<!--        android:layout_marginBottom="65dp"-->
+<!--        android:clickable="true"-->
+<!--        android:elevation="10dp"-->
+<!--        android:src="@drawable/ic_check"-->
+<!--        app:backgroundTint="@color/AzulOscuro"-->
+<!--        tools:ignore="SpeakableTextPresentCheck" />-->
 
     <ScrollView
         android:layout_width="match_parent"
@@ -71,13 +70,14 @@
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/ic_datosp" />
+                            android:src="@drawable/ic_correo" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
                             android:gravity="center"
+                            android:textColor="@color/Blanco"
                             android:text="Datos"
                             android:textSize="20sp" />
 
@@ -110,11 +110,10 @@
                             android:text="2"
                             android:textSize="14dp" />
 
-
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/ic_datos" />
+                            android:src="@drawable/ic_clipboard" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -122,8 +121,8 @@
                             android:layout_marginTop="12dp"
                             android:gravity="center"
                             android:text="Detalle"
+                            android:textColor="@color/Blanco"
                             android:textSize="20sp" />
-
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -157,7 +156,7 @@
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/ic_med" />
+                            android:src="@drawable/ic_add" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -165,6 +164,7 @@
                             android:layout_marginTop="12dp"
                             android:gravity="center"
                             android:text="H. Medico"
+                            android:textColor="@color/Blanco"
                             android:textSize="20sp" />
 
 
@@ -200,7 +200,7 @@
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/ic_diente" />
+                            android:src="@drawable/ic_teeth" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -208,6 +208,7 @@
                             android:layout_marginTop="12dp"
                             android:gravity="center"
                             android:text="H. Dental"
+                            android:textColor="@color/Blanco"
                             android:textSize="20sp" />
 
 
@@ -250,6 +251,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
                             android:gravity="center"
+                            android:textColor="@color/Blanco"
                             android:text="Fotos"
                             android:textSize="20sp" />
 
@@ -257,57 +259,49 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:backgroundTint="@color/AzulOscuro"
-                    android:padding="16dp"
-                    app:cardCornerRadius="12dp"
-                    app:cardElevation="6dp"
-                    app:layout_columnWeight="1"
-                    app:layout_rowWeight="1">
+<!--                <androidx.cardview.widget.CardView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_margin="12dp"-->
+<!--                    android:backgroundTint="@color/AzulOscuro"-->
+<!--                    android:padding="16dp"-->
+<!--                    app:cardCornerRadius="12dp"-->
+<!--                    app:cardElevation="6dp"-->
+<!--                    app:layout_columnWeight="1"-->
+<!--                    app:layout_rowWeight="1">-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="16dp">
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical"-->
+<!--                        android:padding="16dp">-->
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="right"
-                            android:text="6"
-                            android:textSize="14dp" />
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:gravity="right"-->
+<!--                            android:text="6"-->
+<!--                            android:textSize="14dp" />-->
+<!--                      -->
+<!--                        <ImageView-->
+<!--                            android:layout_width="80dp"-->
+<!--                            android:layout_height="80dp"-->
+<!--                            android:src="@drawable/ic_cam" />-->
+
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginTop="12dp"-->
+<!--                            android:gravity="center"-->
+<!--                            android:text="Prueba"-->
+<!--                            android:textSize="20sp" />-->
 
 
-                        <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/ic_cam" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:gravity="center"
-                            android:text="Prueba"
-                            android:textSize="20sp" />
-
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+<!--                    </LinearLayout>-->
+<!--                </androidx.cardview.widget.CardView>-->
 
             </androidx.gridlayout.widget.GridLayout>
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="70dp" />
-
         </LinearLayout>
     </ScrollView>
-
-
 </FrameLayout>
