--- a/app/src/main/res/layout/item_pieza.xml
+++ b/app/src/main/res/layout/item_pieza.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/FondoSecundario2">
@@ -79,7 +80,8 @@
                 android:background="@color/FondoSecundario2"
                 android:src="@drawable/ic_adelante"
                 android:text="Limpiar"
-                android:textColor="@color/Blanco" />
+                android:textColor="@color/Blanco"
+                tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
 
