--- a/app/src/main/res/layout/fragment_historialfoto.xml
+++ b/app/src/main/res/layout/fragment_historialfoto.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/FondoSecundario"
-    tools:context=".Rutas.Fichas.HistorialFoto.HistorialFotografico">
+    tools:context=".Rutas.Fichas.FichaNormal.HistorialFoto.HistorialFotografico">
 
     <include
         android:id="@+id/toolbar"
