--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".OpcionCitas.Citas"
-    android:background="@color/FondoTerciario">
+    android:background="@color/FondoSecundario"
+    tools:context=".Rutas.Citas.Citas">
 
     <include
         android:id="@+id/toolbar"
@@ -53,7 +53,6 @@
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -63,210 +62,187 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
             android:orientation="vertical">
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="70dp" />
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal">-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+<!--                <ImageView-->
+<!--                    android:id="@+id/iconoR"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.2"-->
+<!--                    android:background="@color/AzulOscuro"-->
+<!--                    android:src="@drawable/ic_aceptado" />-->
 
-                <ImageView
-                    android:id="@+id/iconoR"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:background="@color/AzulOscuro"
-                    android:src="@drawable/ic_aceptado" />
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
+<!--                <TextView-->
+<!--                    android:id="@+id/etiquetaR"-->
+<!--                    android:layout_width="100dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="@color/AzulOscuro"-->
+<!--                    android:gravity="center_horizontal|center_vertical"-->
+<!--                    android:text="Cita Realizada"-->
+<!--                    android:textColor="@color/Blanco"-->
+<!--                    android:textSize="20sp" />-->
 
-                <TextView
-                    android:id="@+id/etiquetaR"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:textColor="@color/Blanco"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:background="@color/AzulOscuro"
-                    android:text="Cita Realizada" />
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
+<!--                <CheckBox-->
+<!--                    android:id="@+id/chb_realizado"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    android:checked="true" />-->
 
-                <CheckBox
-                    android:id="@+id/chb_realizado"
-                    android:checked="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.1"/>
+<!--            </LinearLayout>-->
 
-            </LinearLayout>
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:orientation="horizontal">-->
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/iconoP"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.2"-->
+<!--                    android:background="@color/AzulOscuro"-->
+<!--                    android:src="@drawable/ic_estadocita" />-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-                <ImageView
-                    android:id="@+id/iconoP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:background="@color/AzulOscuro"
-                    android:src="@drawable/ic_estadocita" />
+<!--                <TextView-->
+<!--                    android:id="@+id/etiquetaP"-->
+<!--                    android:layout_width="100dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="@color/AzulOscuro"-->
+<!--                    android:gravity="center_horizontal|center_vertical"-->
+<!--                    android:text="Cita Pendiente"-->
+<!--                    android:textColor="@color/Blanco"-->
+<!--                    android:textSize="20sp" />-->
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-                <TextView
-                    android:id="@+id/etiquetaP"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:textColor="@color/Blanco"
-                    android:background="@color/AzulOscuro"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="Cita Pendiente" />
+<!--                <CheckBox-->
+<!--                    android:id="@+id/chb_pendiente"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    android:checked="true" />-->
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
+<!--            </LinearLayout>-->
 
-                <CheckBox
-                    android:id="@+id/chb_pendiente"
-                    android:checked="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.1"/>
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:orientation="horizontal">-->
 
-            </LinearLayout>
+<!--                <ImageView-->
+<!--                    android:id="@+id/iconoFecha"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.2"-->
+<!--                    android:background="@color/AzulOscuro"-->
+<!--                    android:src="@drawable/icono_citas" />-->
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+<!--                <TextView-->
+<!--                    android:id="@+id/etiquetaFecha"-->
+<!--                    android:layout_width="100dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="@color/AzulOscuro"-->
+<!--                    android:gravity="center_horizontal|center_vertical"-->
+<!--                    android:text="21/07/2019"-->
+<!--                    android:textColor="@color/Blanco"-->
+<!--                    android:textSize="20sp" />-->
 
-                <ImageView
-                    android:id="@+id/iconoFecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:background="@color/AzulOscuro"
-                    android:src="@drawable/icono_citas" />
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
+<!--                <CheckBox-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    android:checked="true"-->
+<!--                    android:enabled="false" />-->
 
-                <TextView
-                    android:id="@+id/etiquetaFecha"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="21/07/2019"
-                    android:background="@color/AzulOscuro"
-                    android:textColor="@color/Blanco"
-                    android:textSize="20sp" />
+<!--            </LinearLayout>-->
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:orientation="horizontal">-->
 
-                <CheckBox
-                    android:enabled="false"
-                    android:checked="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.1"/>
+<!--                <ImageView-->
+<!--                    android:id="@+id/iconoHora"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.2"-->
+<!--                    android:background="@color/AzulOscuro"-->
+<!--                    android:src="@drawable/ic_reloj" />-->
 
-            </LinearLayout>
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
+<!--                <TextView-->
+<!--                    android:id="@+id/etiquetaHora"-->
+<!--                    android:layout_width="100dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:gravity="center_horizontal|center_vertical"-->
+<!--                    android:text="3:12 AM"-->
+<!--                    android:textColor="@color/Blanco"-->
+<!--                    android:textSize="20sp" />-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+<!--                <Space-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.3" />-->
 
-                <ImageView
-                    android:id="@+id/iconoHora"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:background="@color/AzulOscuro"
-                    android:src="@drawable/ic_reloj" />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
-
-                <TextView
-                    android:id="@+id/etiquetaHora"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="3:12 AM"
-                    android:textColor="@color/Blanco"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
-                    android:layout_height="match_parent" />
-
-                <CheckBox
-                    android:id="@+id/chb_hora"
-                    android:checked="false"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.1"/>
-            </LinearLayout>
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="20dp" />
+<!--                <CheckBox-->
+<!--                    android:id="@+id/chb_hora"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0.1"-->
+<!--                    android:checked="false" />-->
+<!--            </LinearLayout>-->
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/listaCitas"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="70dp" />
-
+                android:layout_height="match_parent"
+                />
         </LinearLayout>
     </ScrollView>
-
-
-
 </FrameLayout>
