--- a/app/src/main/res/layout/item_citas.xml
+++ b/app/src/main/res/layout/item_citas.xml
@@ -1,85 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardBackgroundColor="@color/FondoTerciario"
-    app:cardCornerRadius="4dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/FondoSecundario2">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:background="@color/AzulOscuro">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/horaCita"
-            android:layout_width="160dp"
-            android:layout_height="30dp"
-            android:background="@color/FondoSecundario"
-            android:gravity="center_horizontal|center_vertical"
-            android:padding="2dp"
-            android:text="12:00 AM"
-            android:textColor="@color/Blanco"
-            android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="3dp"
+            android:paddingTop="3dp"
+            android:paddingRight="3dp"
+            android:paddingBottom="3dp"
+            android:weightSum="2">
 
-        <TextView
-            android:id="@+id/fechaCita"
-            android:layout_width="170dp"
-            android:layout_height="30dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="170dp"
-            android:layout_marginLeft="109dp"
-            android:layout_marginTop="1dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="15/12/2019"
-            android:textColor="@color/Blanco"
-            android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/nombrePaciente"
-            android:layout_width="329dp"
-            android:layout_height="30dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="32dp"
-            android:gravity="center_vertical"
-            android:text="Diego Roberto Torres Claros"
-            android:textColor="@color/Blanco"
-            android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/descCita"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:breakStrategy="simple"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="1dp"
+                    android:text="Revision Normal"
+                    android:textColor="@color/Blanco"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/fechaCita"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.6"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="1dp"
+                    android:text="21/10/2021 3:00 PM"
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/nombrePaciente"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.6"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="3dp"
+                    android:text="Diego Roberto Torres Claros"
+                    android:textColor="@color/Blanco"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:id="@+id/realizado"
+                    android:layout_width="25mm"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="9dp"
+                    android:background="@color/VerdeOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:paddingBottom="1dp"
+                    android:text="Habilitado"
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
+
+                <!--                <LinearLayout-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:orientation="horizontal"-->
+                <!--                    android:layout_marginTop="4dp"-->
+                <!--                    android:weightSum="2">-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/montoServicio"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_weight="0.6"-->
+                <!--                        android:gravity="left"-->
+                <!--                        android:paddingLeft="10dp"-->
+                <!--                        android:paddingTop="3dp"-->
+                <!--                        android:text="Q. 150.00 "-->
+                <!--                        android:textColor="@color/Blanco"-->
+                <!--                        android:textSize="15sp" />-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/estadoServicio"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="match_parent"-->
+                <!--                        android:layout_weight="1.4"-->
+                <!--                        android:background="@color/VerdeOscuro"-->
+                <!--                        android:gravity="center_horizontal|center_vertical"-->
+                <!--                        android:paddingLeft="2dp"-->
+                <!--                        android:paddingRight="2dp"-->
+                <!--                        android:text="Habilitado"-->
+                <!--                        android:textColor="@color/Blanco"-->
+                <!--                        android:textSize="14sp" />-->
+                <!--                </LinearLayout>-->
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/accionesServicio"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.7"
+                android:background="@color/FondoSecundario2"
+                android:src="@drawable/ic_adelante"
+                android:text="Limpiar"
+                android:textColor="@color/Blanco"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/separadorServicio"
+            android:layout_width="wrap_content"
+            android:layout_height="4dp"
+            android:background="@color/FondoSecundario" />
+
+    </LinearLayout>
+
+    <!--    <RelativeLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_margin="4dp"-->
+    <!--        android:background="@color/AzulOscuro">-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/horaCita"-->
+    <!--            android:layout_width="160dp"-->
+    <!--            android:layout_height="30dp"-->
+    <!--            android:background="@color/FondoSecundario"-->
+    <!--            android:gravity="center_horizontal|center_vertical"-->
+    <!--            android:padding="2dp"-->
+    <!--            android:text="12:00 AM"-->
+    <!--            android:textColor="@color/Blanco"-->
+    <!--            android:textSize="18sp" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/fechaCita"-->
+    <!--            android:layout_width="170dp"-->
+    <!--            android:layout_height="30dp"-->
+    <!--            android:layout_alignParentStart="true"-->
+    <!--            android:layout_alignParentLeft="true"-->
+    <!--            android:layout_alignParentTop="true"-->
+    <!--            android:layout_marginStart="170dp"-->
+    <!--            android:layout_marginLeft="109dp"-->
+    <!--            android:layout_marginTop="1dp"-->
+    <!--            android:gravity="center_vertical|center_horizontal"-->
+    <!--            android:text="15/12/2019"-->
+    <!--            android:textColor="@color/Blanco"-->
+    <!--            android:textSize="18sp" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/nombrePaciente"-->
+    <!--            android:layout_width="329dp"-->
+    <!--            android:layout_height="30dp"-->
+    <!--            android:layout_alignParentStart="true"-->
+    <!--            android:layout_alignParentLeft="true"-->
+    <!--            android:layout_alignParentTop="true"-->
+    <!--            android:layout_marginStart="10dp"-->
+    <!--            android:layout_marginLeft="10dp"-->
+    <!--            android:layout_marginTop="32dp"-->
+    <!--            android:gravity="center_vertical"-->
+    <!--            android:text="Diego Roberto Torres Claros"-->
+    <!--            android:textColor="@color/Blanco"-->
+    <!--            android:textSize="18sp" />-->
 
 
-        <TextView
-            android:id="@+id/descCita"
-            android:layout_width="329dp"
-            android:layout_height="30dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="64dp"
-            android:gravity="center_vertical"
-            android:text="Extraccion Muela"
-            android:textColor="@color/Blanco"
-            android:textSize="18sp" />
+    <!--        <TextView-->
+    <!--            android:id="@+id/descCita"-->
+    <!--            android:layout_width="329dp"-->
+    <!--            android:layout_height="30dp"-->
+    <!--            android:layout_alignParentStart="true"-->
+    <!--            android:layout_alignParentLeft="true"-->
+    <!--            android:layout_alignParentTop="true"-->
+    <!--            android:layout_marginStart="10dp"-->
+    <!--            android:layout_marginLeft="10dp"-->
+    <!--            android:layout_marginTop="64dp"-->
+    <!--            android:gravity="center_vertical"-->
+    <!--            android:text="Extraccion Muela"-->
+    <!--            android:textColor="@color/Blanco"-->
+    <!--            android:textSize="18sp" />-->
 
-        <ImageView
-            android:id="@+id/realizado"
-            android:layout_width="40dp"
-            android:layout_height="93dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="340dp"
-            android:layout_marginTop="0dp"
-            app:srcCompat="@drawable/ic_aceptado"
-            tools:ignore="VectorDrawableCompat" />
+    <!--        <ImageView-->
+    <!--            android:id="@+id/realizado"-->
+    <!--            android:layout_width="40dp"-->
+    <!--            android:layout_height="93dp"-->
+    <!--            android:layout_alignParentTop="true"-->
+    <!--            android:layout_marginLeft="340dp"-->
+    <!--            android:layout_marginTop="0dp"-->
+    <!--            app:srcCompat="@drawable/ic_aceptado"-->
+    <!--            tools:ignore="VectorDrawableCompat" />-->
 
-    </RelativeLayout>
+    <!--    </RelativeLayout>-->
 
-</androidx.cardview.widget.CardView>
+</FrameLayout>
