--- a/app/src/main/res/layout/item_pieza.xml
+++ b/app/src/main/res/layout/item_pieza.xml
@@ -32,44 +32,72 @@
                     android:breakStrategy="simple"
                     android:gravity="left"
                     android:paddingLeft="10dp"
-                    android:background="@color/AzulOscuro"
                     android:paddingBottom="2dp"
                     android:text="1 - Diente de Leche"
                     android:textColor="@color/Blanco"
-                    android:textSize="20sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/descPieza"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
+                    android:layout_weight="0.6"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:text="Es una descripcion"
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/descPieza"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.6"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="3dp"
-                        android:text=""
-                        android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/estadoPieza"
+                    android:layout_width="25mm"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="9dp"
+                    android:layout_weight="1.4"
+                    android:background="@color/VerdeOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:paddingBottom="1dp"
+                    android:text="Habilitado"
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/estadoPieza"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1.4"
-                        android:background="@color/VerdeOscuro"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:paddingLeft="2dp"
-                        android:paddingRight="2dp"
-                        android:text="Habilitado"
-                        android:textColor="@color/Blanco"
-                        android:textSize="14sp" />
-                </LinearLayout>
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="4dp"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:weightSum="2">-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/descPieza"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="0.6"-->
+<!--                        android:gravity="left"-->
+<!--                        android:paddingLeft="10dp"-->
+<!--                        android:paddingTop="3dp"-->
+<!--                        android:text=""-->
+<!--                        android:textColor="@color/Blanco"-->
+<!--                        android:textSize="15sp" />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/estadoPieza"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:layout_weight="1.4"-->
+<!--                        android:background="@color/VerdeOscuro"-->
+<!--                        android:gravity="center_horizontal|center_vertical"-->
+<!--                        android:paddingLeft="2dp"-->
+<!--                        android:paddingRight="2dp"-->
+<!--                        android:text="Habilitado"-->
+<!--                        android:textColor="@color/Blanco"-->
+<!--                        android:textSize="14sp" />-->
+<!--                </LinearLayout>-->
             </LinearLayout>
 
             <ImageButton
