--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/FondoSecundario2">
@@ -14,73 +15,102 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="3dp"
-            android:paddingRight="3dp"
             android:paddingTop="3dp"
-            android:paddingBottom="3dp">
+            android:paddingRight="3dp"
+            android:paddingBottom="3dp"
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.5"
+                android:layout_weight="0.3"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tituloServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:breakStrategy="simple"
                     android:gravity="left"
                     android:paddingLeft="10dp"
                     android:paddingBottom="2dp"
                     android:text="1 - Consulta General"
-                    android:background="@color/AzulOscuro"
                     android:textColor="@color/Blanco"
-                    android:textSize="20sp"
-                    android:breakStrategy="simple"
-                    />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/montoServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="4dp"
-                    android:weightSum="2">
+                    android:layout_weight="0.6"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:text="Q. 150.00 "
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/montoServicio"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.6"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="3dp"
-                        android:text="Q. 150.00 "
-                        android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/estadoServicio"
+                    android:layout_width="25mm"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="9dp"
+                    android:layout_weight="1.4"
+                    android:background="@color/VerdeOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:paddingBottom="1dp"
+                    android:text="Habilitado"
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/estadoServicio"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1.4"
-                        android:background="@color/VerdeOscuro"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:paddingLeft="2dp"
-                        android:paddingRight="2dp"
-                        android:text="Habilitado"
-                        android:textColor="@color/Blanco"
-                        android:textSize="14sp" />
-                </LinearLayout>
+                <!--                <LinearLayout-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:orientation="horizontal"-->
+                <!--                    android:layout_marginTop="4dp"-->
+                <!--                    android:weightSum="2">-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/montoServicio"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_weight="0.6"-->
+                <!--                        android:gravity="left"-->
+                <!--                        android:paddingLeft="10dp"-->
+                <!--                        android:paddingTop="3dp"-->
+                <!--                        android:text="Q. 150.00 "-->
+                <!--                        android:textColor="@color/Blanco"-->
+                <!--                        android:textSize="15sp" />-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/estadoServicio"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="match_parent"-->
+                <!--                        android:layout_weight="1.4"-->
+                <!--                        android:background="@color/VerdeOscuro"-->
+                <!--                        android:gravity="center_horizontal|center_vertical"-->
+                <!--                        android:paddingLeft="2dp"-->
+                <!--                        android:paddingRight="2dp"-->
+                <!--                        android:text="Habilitado"-->
+                <!--                        android:textColor="@color/Blanco"-->
+                <!--                        android:textSize="14sp" />-->
+                <!--                </LinearLayout>-->
             </LinearLayout>
 
             <ImageButton
                 android:id="@+id/accionesServicio"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="10"
+                android:layout_weight="1.7"
                 android:background="@color/FondoSecundario2"
                 android:src="@drawable/ic_adelante"
                 android:text="Limpiar"
-                android:textColor="@color/Blanco" />
+                android:textColor="@color/Blanco"
+                tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
 
