--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
 <!--    xmlns:tools="http://schemas.android.com/tools"-->
 <!--    android:layout_width="match_parent"-->
@@ -163,6 +162,7 @@
 
 <!--</android.support.v7.widget.CardView>-->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/FondoSecundario2">
@@ -179,12 +179,13 @@
             android:paddingLeft="3dp"
             android:paddingTop="3dp"
             android:paddingRight="3dp"
-            android:paddingBottom="3dp">
+            android:paddingBottom="3dp"
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.5"
+                android:layout_weight="0.3"
                 android:orientation="vertical">
 
                 <TextView
@@ -196,60 +197,85 @@
                     android:paddingLeft="10dp"
                     android:paddingBottom="2dp"
                     android:text="Diego Torres"
-                    android:background="@color/AzulOscuro"
                     android:textColor="@color/Blanco"
-                    android:textSize="20sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/fechaNacimientoPaciente"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="3dp"
+                    android:text="20/10/2021"
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/edadPaciente"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.1"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="3dp"
+                    android:text="12 Años"
+                    android:textColor="@color/Blanco"
+                    android:textSize="12sp" />
+
+
+                <!--                <LinearLayout-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="4dp"-->
+                <!--                    android:orientation="horizontal"-->
+                <!--                    android:weightSum="3">-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/fechaNacimientoPaciente"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_weight="1"-->
+                <!--                        android:gravity="left"-->
+                <!--                        android:paddingLeft="10dp"-->
+                <!--                        android:paddingTop="3dp"-->
+                <!--                        android:text="20/10/2021"-->
+                <!--                        android:textColor="@color/Blanco"-->
+                <!--                        android:textSize="15sp" />-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/edadPaciente"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="match_parent"-->
+                <!--                        android:layout_weight="1.1"-->
+                <!--                        android:gravity="left"-->
+                <!--                        android:paddingLeft="10dp"-->
+                <!--                        android:paddingTop="3dp"-->
+                <!--                        android:text="12 Años"-->
+                <!--                        android:textColor="@color/Blanco"-->
+                <!--                        android:textSize="14sp" />-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/estadoPaciente"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="match_parent"-->
+                <!--                        android:layout_weight="0.9"-->
+                <!--                        android:background="@color/VerdeOscuro"-->
+                <!--                        android:gravity="center_horizontal|center_vertical"-->
+                <!--                        android:paddingLeft="2dp"-->
+                <!--                        android:paddingRight="2dp"-->
+                <!--                        android:text="Habilitado"-->
+                <!--                        android:textColor="@color/Blanco"-->
+                <!--                        android:textSize="14sp" />-->
+                <!--                </LinearLayout>-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:orientation="horizontal"
-                    android:weightSum="3">
-
-                    <TextView
-                        android:id="@+id/fechaNacimientoPaciente"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="3dp"
-                        android:text="20/10/2021"
-                        android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/edadPaciente"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1.1"
-                        android:gravity="left"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="3dp"
-                        android:text="12 Años"
-                        android:textColor="@color/Blanco"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/estadoPaciente"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.9"
-                        android:background="@color/VerdeOscuro"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:paddingLeft="2dp"
-                        android:paddingRight="2dp"
-                        android:text="Habilitado"
-                        android:textColor="@color/Blanco"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:orientation="horizontal"
+                    android:paddingBottom="2dp"
                     android:weightSum="3">
 
                     <TextView
@@ -260,9 +286,10 @@
                         android:gravity="left"
                         android:paddingLeft="10dp"
                         android:paddingTop="3dp"
-                        android:text="15.25"
+                        android:text="C: 15.25"
                         android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/haberPaciente"
@@ -272,9 +299,10 @@
                         android:gravity="left"
                         android:paddingLeft="10dp"
                         android:paddingTop="3dp"
-                        android:text="15.25"
+                        android:text="A: 15.25"
                         android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/saldoPaciente"
@@ -284,21 +312,38 @@
                         android:gravity="left"
                         android:paddingLeft="10dp"
                         android:paddingTop="3dp"
-                        android:text="15.25"
+                        android:text="S: 15.25"
                         android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/estadoPaciente"
+                    android:layout_width="25mm"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="9dp"
+                    android:layout_weight="1.4"
+                    android:background="@color/VerdeOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:paddingBottom="1dp"
+                    android:text="Habilitado"
+                    android:textColor="@color/Blanco"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <ImageButton
                 android:id="@+id/accionesPaciente"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="10"
+                android:layout_weight="1.7"
                 android:background="@color/FondoSecundario2"
                 android:src="@drawable/ic_adelante"
                 android:text="Limpiar"
-                android:textColor="@color/Blanco" />
+                android:textColor="@color/Blanco"
+                tools:ignore="SpeakableTextPresentCheck" />
         </LinearLayout>
 
         <View
@@ -308,6 +353,4 @@
             android:background="@color/FondoSecundario" />
 
     </LinearLayout>
-
-
 </FrameLayout>
