--- a/app/src/main/res/layout/fragment_ing_evaluacion.xml
+++ b/app/src/main/res/layout/fragment_ing_evaluacion.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/FondoTerciario"
-    tools:context=".OpcionIngreso.Especial.IngEvaluacion">
+    tools:context=".Rutas.Fichas.FichaEspecial.IngEvaluacion">
 
     <include
         android:id="@+id/toolbar"
