--- a/app/src/main/res/layout/fragment_ingreso_visitas.xml
+++ b/app/src/main/res/layout/fragment_ingreso_visitas.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/FondoTerciario"
-    tools:context=".OpcionIngreso.Especial.IngresoVisitas">
+    tools:context=".Rutas.Fichas.FichaEspecial.IngresoVisitas">
 
     <include
         android:id="@+id/toolbar"
